Update Dockerfile and app.js

--- a/mendez-mr-inventory-system/inventory-app/Dockerfile
+++ b/mendez-mr-inventory-system/inventory-app/Dockerfile
@@ -5,8 +5,8 @@ WORKDIR /app
 COPY webapp/package.json /app
 
 RUN npm install
+RUN npm audit fix --force
 
 COPY webapp/ .
 
 CMD [ "node", "app.js" ]
-
