--- a/bondoc-jd-inventory/nginx.conf
+++ b/bondoc-jd-inventory/nginx.conf
@@ -27,7 +27,7 @@ http {
     listen       80;
     server_name  domain1.com www.domain1.com;
     access_log   logs/domain1.access.log  main;
-    root         html;
+    root         adminpage.php;
 
     location ~ \.php$ {
       fastcgi_pass   127.0.0.1:1025;
