--- a/bondoc-jd-inventory/docker-compose.yml
+++ b/bondoc-jd-inventory/docker-compose.yml
@@ -2,10 +2,10 @@ version: '3.9'
 services:
   apache-services:
     container_name: Inventory-System
-    image: httpd:latest
+    image: httpd:2.4.54
     cpus: 1.5
     mem_limit: 2048m
     ports:
-      -"8080:80"
+      -"80:80"
     volumes:
     - InventorySystem/*:/usr/local/apache2/htdocs/ 
