--- a/bondoc-jd-inventory/docker-compose.yml
+++ b/bondoc-jd-inventory/docker-compose.yml
@@ -1,11 +1,23 @@
 version: '3.9'
+
 services:
   apache-services:
     container_name: Inventory-System
-    image: httpd:2.4.54
-    cpus: 1.5
-    mem_limit: 2048m
+    image: httpd:latest
     ports:
       -"80:80"
     volumes:
     - InventorySystem/*:/usr/local/apache2/htdocs/ 
+    depends_on:
+      - db
+
+db:
+  image: mariadb:10.9
+  container_name: db
+  restart: on-failure
+  environment:
+      MYSQL_ROOT_PASSWORD: 123
+  ports:
+    -'3306:3306'
+  volumes:
+      - ./data:var/lib/mysql
