--- a/bondoc-jd-inventory/docker-compose.yml
+++ b/bondoc-jd-inventory/docker-compose.yml
@@ -5,19 +5,7 @@ services:
     container_name: Inventory-System
     image: httpd:latest
     ports:
-      -"80:80"
+      - '80:80'
     volumes:
-    - InventorySystem/*:/usr/local/apache2/htdocs/ 
-    depends_on:
-      - db
+    - ./InventorySystem:/usr/local/apache2/htdocs/
 
-db:
-  image: mariadb:10.9
-  container_name: db
-  restart: on-failure
-  environment:
-      MYSQL_ROOT_PASSWORD: 123
-  ports:
-    -'3306:3306'
-  volumes:
-      - ./data:var/lib/mysql
