--- a/bondoc-jd-inventory/Dockerfile
+++ b/bondoc-jd-inventory/Dockerfile
@@ -1,8 +1,19 @@
-#FROM httpd:2.4.54
+FROM php:7.3-fpm-alpine
 
-#COPY InventorySystem/* /usr/local/apache2/htdocs/ 
+WORKDIR /var/www
+
+RUN apk update && apk add \
+    build-base \
+    vim
 
 
-FROM php:8.0-apache
-RUN docker-php-ext-install mysqli && docker-php-ext-enable mysqli
-RUN apt-get update && apt-get upgrade -y
+RUN docker-php-ext-install pdo_mysql
+
+RUN addgroup -g 1000 -S www && \
+    adduser -u 1000 -S www -G www
+
+USER www
+
+COPY --chown=www:www . /var/www
+
+EXPOSE 9000
