--- a/Simple-Inventory-System/site.conf
+++ b/Simple-Inventory-System/site.conf
@@ -10,6 +10,7 @@ server {
 
    location / {
        try_files $uri /index.php?$args;
+       proxy_pass http://localhost:80/;
    }
    location ~ \.php$ {
        fastcgi_split_path_info ^(.+\.php)(/.+)$;
