--- a/Memeic/.env
+++ b/Memeic/.env
@@ -1,1 +1,4 @@
 MONGODB_URL = mongodb+srv://greg123:greg123@cluster0.4nauoxa.mongodb.net/Memeic?retryWrites=true&w=majority
+
+ACCESS_TOKEN_SECRET = myaccesstokensecret001
+REFRESH_TOKEN_SECRET = myrefreshtokensecret00132141332
