--- a/midterms/blog/dockerfile
+++ b/midterms/blog/dockerfile
@@ -1,2 +1,9 @@
-FROM nginx:alpine
-COPY . /usr/share/nginx/html
+FROM nginx:1.15.8-alpine
+#configuration
+copy ./nginx.conf /etc/nginx/nginx.conf
+#content, comment out the ones you dont need!
+copy ./*.html /usr/share/nginx/html/
+copy ./*.css /usr/share/nginx/html/
+copy ./*.png /usr/share/nginx/html/
+copy ./*.js /usr/share/nginx/html/
+copy ./*.scss /usr/share/nginx/html/
