--- a/pasco-ij-ecommerce/docker-compose.yml
+++ b/pasco-ij-ecommerce/docker-compose.yml
@@ -18,19 +18,22 @@ services:
     volumes:
       - ./Ecommerce:/public
     depends_on:
-      - database
+      - db
+    ports:
+      - "9000:9000"
+      - "8080:80"
     networks:
       codeigniter_net:
 
-  database:
-    image: mysql:5.7
-    command: --default-authentication-plugin=mysql_native_password
-    networks:
-      codeigniter_net:
+  db:
+    image: mariadb:10.3.36
+    container_name: db
+    restart: on-failure
+    environment:
+       MYSQL_ROOT_PASSWORD: root
     ports:
-      - 3307:3306
-    restart: always
-  
+      - '3306:3306'
+
 
 networks:
   codeigniter_net:
