--- a/pasco-ij-ecommerce/site.conf
+++ b/pasco-ij-ecommerce/site.conf
@@ -1,30 +1,24 @@
+upstream ecommerce {
+    server  192.168.100.12:8080 fail_timeout=0;
+}
+
 server {
-   listen 90 default_server;
-   index index.php index.html;
-   
-   access_log /var/log/nginx/access.log;
-   error_log /var/log/nginx/error.log;
+    listen 80;
+    server_name ecommerce.local.com;
 
-    # set client body size#
-    client_max_body_size 8M;
-
-   location / {
-       try_files $uri /index.php?$args;
-       proxy_pass http://localhost:80/;
-   }
-   location ~ \.php$ {
-       fastcgi_split_path_info ^(.+\.php)(/.+)$;
-       fastcgi_pass php:9000;
-       fastcgi_index index.php;
-       include fastcgi_params;
-       fastcgi_param SCRIPT_FILENAME /public$fastcgi_script_name;
-       fastcgi_param PATH_INFO $fastcgi_path_info;
-   }
-
-   location ~* \.(jpe?g|gif|png|bmp|ico|css|js|pdf|zip|htm|html|docx?|xlsx?|pptx?|txt|wav|swf|avi|mp\d)$ {
-        access_log off;
-        log_not_found off;
-        try_files $uri $uri/ /public/$uri /index.php?$args;
-        expires 1w;
+    location  / {
+        proxy_pass http://ecommerce/;
+        proxy_set_header        X-Real-IP       $remote_addr;
+        proxy_set_header        Host  $host;
+        proxy_redirect          off;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_connect_timeout   90;
+        proxy_send_timeout      90;
+        proxy_read_timeout      90;
+        client_max_body_size    10m;
+        client_body_buffer_size 128k;
+        proxy_buffer_size       4k;
+        proxy_buffers           4 32k;
+        proxy_busy_buffers_size 64k;
     }
 }
