--- a/final_project-main/backend/src/main/resources/application.properties
+++ b/final_project-main/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ems?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/ems?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=0000
 
