--- a/final/final_project-main/backend/pom.xml
+++ b/final/final_project-main/backend/pom.xml
@@ -14,7 +14,8 @@
 	<name>final_project</name>
 	<description>final project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>17</java.version> 
+		<start-class>your.package.main</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
