--- a/samonte-ns-blog/.env
+++ b/samonte-ns-blog/.env
@@ -1,7 +1,7 @@
 PHP_ENABLE_XDEBUG=0
 MYSQL_HOST=database
 MYSQL_PORT=3306
-MYSQL_DATABASE=blog
+MYSQL_DATABASE=inventory
 MYSQL_USER=ci
 MYSQL_PASSWORD=ci
 MYSQL_ROOT_PASSWORD=ci
